# LaykHaus

./: .dockerignore  .env.example  .gitignore  DEMO.md  Makefile  README.md  docker-compose.data.yml  docker-compose.yml
laykhaus-core/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
laykhaus-core/src/laykhaus/: __init__.py  app.py  main.py
laykhaus-core/src/laykhaus/api/: spark_endpoints.py
laykhaus-core/src/laykhaus/api/routes/: __init__.py  connectors.py  health.py  query.py  spark.py
laykhaus-core/src/laykhaus/catalog/: __init__.py  catalog_service.py  models.py
laykhaus-core/src/laykhaus/connectors/: base.py  capability_contracts.py  connection_manager.py  factory.py  kafka_connector.py  postgres_connector.py  rest_api_connector.py
laykhaus-core/src/laykhaus/core/: config.py  logging.py
laykhaus-core/src/laykhaus/engine/: spark_execution_engine.py
laykhaus-core/src/laykhaus/federation/: __init__.py  data_provider.py  executor.py  mock_data_provider.py  optimizer.py  parser.py  planner.py  real_data_provider.py  spark_federated_executor.py
laykhaus-core/src/laykhaus/gateway/: __init__.py  pg_protocol.py
laykhaus-core/src/laykhaus/graphql/: __init__.py  gateway.py  resolvers.py  schema_generator.py  websocket.py
laykhaus-core/src/laykhaus/integrations/: __init__.py
laykhaus-core/src/laykhaus/integrations/kafka/: __init__.py  client.py
laykhaus-core/src/laykhaus/integrations/postgres/: __init__.py  client.py
laykhaus-core/src/laykhaus/integrations/rest/: __init__.py  client.py
laykhaus-core/src/laykhaus/integrations/spark/: client.py  config.py
laykhaus-core/src/laykhaus/ml/: __init__.py  analytics.py  framework.py  optimization.py
laykhaus-core/src/laykhaus/security/: __init__.py  masking.py  rbac.py
laykhaus-core/src/laykhaus/streaming/: __init__.py  analytics.py  kafka_engine.py  spark_engine.py  stream_processor.py
laykhaus-ui/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
laykhaus-ui/app/: layout.tsx  page.tsx
laykhaus-ui/app/api/catalog/schemas/: route.ts
laykhaus-ui/app/api/connectors/[id]/test/: route.ts
laykhaus-ui/app/api/connectors/stats/: route.ts
laykhaus-ui/app/api/queries/execute/: route.ts
laykhaus-ui/app/api/queries/stats/: route.ts
laykhaus-ui/app/api/spark/stats/: route.ts
laykhaus-ui/app/api/streaming/stats/: route.ts
laykhaus-ui/app/connectors/: page.tsx
laykhaus-ui/app/query/: page.tsx
laykhaus-ui/components/connectors/: ConnectorCard.tsx  ConnectorDialog.tsx
laykhaus-ui/components/layout/: Header.tsx
laykhaus-ui/components/providers/: query-provider.tsx
laykhaus-ui/components/query/: QueryEditor.tsx  QueryHistory.tsx  QueryResults.tsx  SchemaExplorer.tsx
laykhaus-ui/components/ui/: dialog.tsx  form.tsx  inline-notification.tsx  label.tsx  select.tsx
laykhaus-ui/lib/api/: client.ts
laykhaus-ui/lib/hooks/: useConnectors.ts  useQuery.ts
laykhaus-ui/lib/types/: analytics.ts  connector.ts  query.ts  streaming.ts
laykhaus-ui/tests/: setup.ts
mock-data-generator/: Makefile  README.md
mock-data-generator/generator/: Dockerfile  generator.py
mock-data-generator/postgres/: init.sql
mock-data-generator/rest-api/: Dockerfile  api_server.py
src/laykhaus/integrations/spark/: __init__.py
