[tool.poetry]
name = "laykhaus-core"
version = "0.1.0"
description = "Federated Data Lakehouse Platform with SQL and GraphQL Interfaces"
authors = ["LaykHaus Team"]
readme = "README.md"
packages = [{include = "laykhaus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework & API
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"

# Database support
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"

# Data Processing & Spark
pyarrow = "^14.0.1"
pyspark = "^3.5.6"
sqlparse = "^0.4.4"

# Kafka connector support
aiokafka = "^0.10.0"

# Observability
prometheus-client = "^0.19.0"

# Utilities
httpx = "^0.25.2"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
orjson = "^3.9.10"
tenacity = "^8.2.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
testcontainers = {extras = ["postgres", "kafka"], version = "^3.7.1"}
faker = "^20.1.0"

# Code Quality
black = "^23.11.0"
isort = "^5.13.0"
pylint = "^3.0.3"
mypy = "^1.7.1"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/laykhaus"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"